--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <link rel="icon" href="./assets/images/logo.png" />
-    <title>Direction</title>
+    <link rel="icon" href="./assets/images/logo.ico" />
+    <title>Elmadd</title>
 <!--
 
 Lava Landing Page
@@ -81,9 +81,9 @@ https://templatemo.com/tm-540-lava-landing-page
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h1> <em>Direction</em></h1>
+                        <h1> <em>Elmadd</em></h1>
                         <p>
-                            Direction application is an application based on providing remote consultations
+                            Elmadd application is an application based on providing remote consultations
                         </a>
                              
                         <div class="donlwad">
@@ -176,7 +176,7 @@ https://templatemo.com/tm-540-lava-landing-page
                         </div>
                         <div class="text">
                             <p>
-                                Direction makes it easy to book consultations with professionals.
+                                Elmadd makes it easy to book consultations with professionals.
                             </p>
                         </div>
                     </li>
@@ -346,10 +346,10 @@ https://templatemo.com/tm-540-lava-landing-page
                     </div>
                     <!-- ***** Contact Form End ***** -->
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
-                        <h2>More About <em>Direction</em></h2>
+                        <h2>More About <em>Elmadd</em></h2>
                         
                         <p>
-                            Direction application is an application based on providing remote consultations
+                            Elmadd application is an application based on providing remote consultations
                         </a>
                         <ul class="social">
                             <li><a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a></li>
@@ -364,7 +364,7 @@ https://templatemo.com/tm-540-lava-landing-page
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright &copy; 2020 Direction Landing Page
+                        <p>Copyright &copy; 2020 Elmadd Landing Page
 
                         | Designed by <a rel="nofollow" href="https://hwzn.sa/" target="_blank">Hwzn</a></p>
                     </div>
