--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@ https://templatemo.com/tm-540-lava-landing-page
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#welcome" class="menu-item">Home</a></li>
+                            <li class="scroll-to-section">
+                                <a href="#welcome" class="menu-item">Home</a></li>
                             <li class="scroll-to-section"><a href="#promotion" class="menu-item">About</a></li>
                             <li class="scroll-to-section"><a href="#contact-us" class="menu-item">Contact Us</a></li>
+                            <li class="scroll-to-section"><a href="https://www.google.com/" 
+                                 target="_blank" class="menu-item-link">Cos</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
